frontend/css/style.css
/* ... */
.letter .btn {
    font-size: 1.4rem;
    position: absolute;
    right: 0.1rem;
    top: 0;
}

.table-paper {
    text-align: left;
    font-family: var(--hand-font);
    background-color: var(--col-paper-yellow);
    line-height: 18px;
    -webkit-box-shadow: 0 0 5px 0 #888;
    box-shadow: 0 0 5px 0 #888;
    padding: 0.7rem 1.1rem;
    margin: 1rem 1rem;
}

.table-paper table {
    white-space: nowrap;
}

.table-paper > * {
    margin: 0.5rem;
}

.table-paper td,
th {
    padding: 0.15rem 0.4rem;
}

.table-paper th {
    max-width: 200px;
    overflow: hidden;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
}

.book-open .table-paper th {
    max-width: unset;
    overflow: visible;
    -o-text-overflow: unset;
    text-overflow: unset;
}

.paper-green {
    background-color: var(--col-paper-green);
}

/* Info box --------------------*/
/*
  This is easily the most complicated styled element in the whole
  project because of the amount of different similar styles.
  The complexity is mostly due to the padding and margin rules.
*/

.info-box {
    background: var(--col-rune-grey) url("../assets/ui/runestone-texture-seamless.png");
    -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
    box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
    margin-right: 2rem;
}

[onclick]:hover {
    cursor: pointer;
}

.info-box > * {
    margin: 1rem 1rem;
}

#login-view .info-box > *,
#register-view .info-box > *,
#forgot-password-view .info-box > *,
#reset-password-view .info-box > * {
    padding: 0.7rem 1.1rem;
}

#login-view .alert,
#register-view .alert,
#forgot-password-view .alert,
#reset-password-view .alert {
    margin-left: 2.2rem;
    margin-right: 2.2rem;
}

.info-box .row,
.info-box .collapse {
    margin: 1rem;
    padding: 0;
}

.info-box > h1,
.info-box > h2,
.info-box > h3,
.info-box > h4,
.info-box > h5 {
    padding: 0;
    margin-bottom: 0;
}

.info-box .row .table-paper {
    margin: 0;
    padding: 0.4rem 0.2rem;
}

.info-box hr {
    border-color: var(--col-gold-85);
    padding: 0;
}

.info-box textarea {
    background: url("../assets/ui/runestone-texture-seamless.png");
    border-color: var(--col-gold-40) !important;
    color: var(--col-gold-85);
}

.confirm-modal {
    background: #ffffee url("../assets/ui/scroll-texture-seamless.png");
    font-family: var(--hand-font);
}

.confirm-modal .modal-header {
    border: none;
    padding-bottom: 0
}

.confirm-modal .modal-footer {
    border: none;
    padding-top: 0
}

.btn-rune-red {
    background: none;
    border-color: #920f18;
    color: #920f18;
    border-style: solid;
    outline-width: 1px;
}

.btn-rune-red:hover {
    border-color: #92000a;
    color: #92000a;
    box-shadow: 0 0 0 0.2rem #92000a88;
}

.btn-rune-red:focus {
    box-shadow: 0 0 0 0.2rem #92000a88;
}

.example,
.tests {
    background: none;
    border-style: solid;
    border-width: 4px;
}

.example {
    padding-top: 1rem;
    border-color: var(--col-good-blue-50) !important;
}

@media (max-width: 768px) {
    .example {
        min-width: unset;
        max-width: unset;
    }
}

.example hr {
    border-color: var(--col-good-blue-50) !important;
}

.example #task-flame-container {
    height: 90px;
}

.tests {
    border-color: var(--col-gold-40) !important;
    width: 100%;
    margin-top: 1rem;
    margin-bottom: 1rem;
    -webkit-transition: max-height 0.3s ease-in-out;
    -o-transition: max-height 0.3s ease-in-out;
    transition: max-height 0.3s ease-in-out;
    overflow: hidden;
    max-height: 200vh;
}

.tests.closing,
.tests.closed {
    -webkit-transition: max-height 0.15s ease-in-out;
    -o-transition: max-height 0.15s ease-in-out;
    transition: max-height 0.15s ease-in-out;
    max-height: 0;
}

.tests > *:empty {
    display: none;
}

.tests .nav-link {
    border-color: var(--col-gold-50) !important;
    border-bottom: none;
    background: none;
    color: var(--col-gold-100);
    font-size: 1.1rem;
}

.tests .nav-link:not(.collapsed) {
    pointer-events: none;
    cursor: default;
    background-color: var(--col-gold-20) !important;
}

.tests .nav {
    border-color: var(--col-gold-50) !important;
}

.btn-rune,
.info-box .btn {
    background: url("../assets/ui/runestone-texture-seamless.png");
    border-color: var(--col-gold-60);
    color: var(--col-gold-70);
    border-style: solid;
    outline-width: 1px;
}

.dropdown.btn-rune > button {
    background-color: transparent;
    border-style: none;
    color: var(--col-gold-70);
}

.btn-rune:hover,
.info-box .btn:hover,
.dropdown.btn-rune:hover > button {
    color: var(--col-gold-100);
}

.btn-rune:focus,
.info-box .btn:focus {
    -webkit-box-shadow: 0 0 0 0.2rem var(--col-gold-25);
    box-shadow: 0 0 0 0.2rem var(--col-gold-25);
}


.select-rune {
    background-color: transparent;
    color: var(--col-gold-70);
    border-style: solid;
    border-color: var(--col-gold-60);
    border-width: 1px;
}

.select-rune option {
    color: black;
}

.btn-rune-icon {
    border-style: none;
}

/* Inventory ------------------- */

#inventory-container {
    position: fixed;
    z-index: 10;
    background: rgb(21 21 21 / 80%);
    bottom: 0;
    left: 0;
    width: 100%;
    -ms-flex-line-pack: center;
    align-content: center;
}

#inventory .item {
    -webkit-transform: scale(0.7);
    -ms-transform: scale(0.7);
    transform: scale(0.7);
    margin: -2rem;
}

@media (min-width: 1200px) {
    .viewed-tasks .break {
        -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
        height: 0;
    }
}

#inventory .item > p {
    -webkit-transform: scale(1.5);
    -ms-transform: scale(1.5);
    transform: scale(1.5);
    margin-top: 0.2rem;
}

button.item {
    padding: 0;
}

.item {
    background-color: transparent;
    border-style: none;
}

.item:focus {
    outline: white dotted 1px;
}

.item.locked {
    -webkit-filter: grayscale(0.5) brightness(0.5);
    filter: grayscale(0.5) brightness(0.5);
    pointer-events: none;
}
/* ... */

